--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <i class="fas fa-envelope"></i> mtetwatutu@gmail.com |
                     <i class="fas fa-phone"></i> 660 280 4188 |
                     <i class="fas fa-map-marker-alt"></i> Kirksville, MO |
-                    <i class="fab fa-linkedin"></i> <a href="www.linkedin.com/in/tutu-mtetwa" target="_blank">LinkedIn</a>
+                    <i class="fab fa-linkedin"></i> <a href="www.google.com" target="_blank">LinkedIn</a>
                 </p>
             </div>
     
