--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 <body class="resume">
     <div class="download-button">
-        <a href="https://drive.google.com/file/d/12DM5ANtf8VMkkk0zbz8byogNeyBt7zCU/view?usp=drive_link" id="download-pdf">Download PDF</a>
-        <a href="https://docs.google.com/document/d/1ZGYdyl1ftbsI8WI3Zoy6cDFM0CdJDmw4/edit?usp=drive_link&ouid=109724138241590266217&rtpof=true&sd=true" id="download-docx">Download DOCX</a>
+        <a href="https://drive.google.com/file/d/1mEswIiIXiJctW9bMPuHjfjCgfGt9vRI2/view?usp=drive_link">Download PDF</a>
+        <a href="https://docs.google.com/document/d/1l20e8_E9oVk7bp8o9RvkIJuOWmr3q6VA/edit?usp=sharing&ouid=109724138241590266217&rtpof=true&sd=true">Download DOCX</a>
     </div>
     
     <body class="resume">
