--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <i class="fas fa-phone"></i> 660 280 4188 |
                     <i class="fas fa-map-marker-alt"></i> Kirksville, MO |
                     <i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/tutu-mtetwa" target="_blank">LinkedIn</a>
+                    <i class="fab fa-github"></i> <a href="google.com">GitHub</a> 
                 </p>
             </div>
     
