--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     <i class="fas fa-envelope"></i> mtetwatutu@gmail.com |
                     <i class="fas fa-phone"></i> 660 280 4188 |
                     <i class="fas fa-map-marker-alt"></i> Kirksville, MO |
-                    <i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/tutu-mtetwa" target="_blank">LinkedIn</a>
-                    <i class="fab fa-github"></i> <a href="google.com">GitHub</a> 
+                    <i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/tutu-mtetwa" target="_blank">LinkedIn</a> | 
+                    <i class="fab fa-github"></i> <a href="https://github.com/TutuMtetwa" target="_blank">GitHub</a>
                 </p>
             </div>
     
