--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css"> <!-- Include your external styles here -->
+    <link rel="stylesheet" href="style.css"> 
     <title>Tutu Mtetwa - Resume</title>
     <style>
         /* Additional styles specific to this resume */
@@ -34,8 +34,8 @@
 
 <body class="resume">
     <div class="download-button">
-        <a href="https://drive.google.com/file/d/1mEswIiIXiJctW9bMPuHjfjCgfGt9vRI2/view?usp=drive_link">Download PDF</a>
-        <a href="https://docs.google.com/document/d/1l20e8_E9oVk7bp8o9RvkIJuOWmr3q6VA/edit?usp=sharing&ouid=109724138241590266217&rtpof=true&sd=true">Download DOCX</a>
+        <a href="https://drive.google.com/file/d/1mEswIiIXiJctW9bMPuHjfjCgfGt9vRI2/view?usp=drive_link" target="_blank">Download PDF</a>
+        <a href="https://docs.google.com/document/d/1l20e8_E9oVk7bp8o9RvkIJuOWmr3q6VA/edit?usp=sharing&ouid=109724138241590266217&rtpof=true&sd=true" target="_blank">Download DOCX</a>
     </div>
     
     <body class="resume">
