--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 <body class="resume">
     <div class="download-button">
-        <a href="https://drive.google.com/file/d/1mEswIiIXiJctW9bMPuHjfjCgfGt9vRI2/view?usp=drive_link" target="_blank">Download PDF</a>
-        <a href="https://docs.google.com/document/d/1l20e8_E9oVk7bp8o9RvkIJuOWmr3q6VA/edit?usp=sharing&ouid=109724138241590266217&rtpof=true&sd=true" target="_blank">Download DOCX</a>
+        <a href="https://drive.google.com/file/d/12UlIQjTtwu4rFG-DVnkF8OjTJGFA-KOl/view?usp=sharing" target="_blank">Download PDF</a>
+        <a href="https://docs.google.com/document/d/1E8tFJLLO9tjRxrMeVpCx0Pufla3PTACK/edit?usp=sharing&ouid=109724138241590266217&rtpof=true&sd=true" target="_blank">Download DOCX</a>
     </div>
     
     <body class="resume">
