--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <p>
                     <strong>Languages:</strong> English, Shona, Zulu<br>
                     <strong>Programming Languages:</strong> C++, Java, Python, CSS, HTML, VB.NET, Swift<br>
-                    <strong>Skills:</strong> Statistics, Computer Engineering, Debugging, Software Development, Data Science, MIS<br>
+                    <strong>Skills:</strong> Data Structures and Algorithms, Statistics, Software Development and Debugging, Data Science, Project Management, Flutter<br>
                     <strong>Soft Skills:</strong> Emotional Intelligence, Growth Mindset, Creativity, Communication, Leadership<br>
                     <strong>Hobbies:</strong> Basketball, Gaming, Playing Piano, Listening to Podcasts, Music
                 </p>
